v1.2.1 Wed 6 May 2020
  Ensure OpenSSL is available on installation

v1.2 Sun 9 Jun 2019
  Use https as default
  Handle 401 and 403 exceptions
  Documentation clean up
  Test proximity works and add an example to README

v1.1.5 Sun 30 Sep 2018
  Update setup.py to show project description on pypi.org

v1.1.4 Mon 19 Jul 2015
  Server response for exceeded quota is HTTP 402, not 429

v1.1.3 Mon 29 Jun 2015
	* .tar.gz file was missing for v1.1.2

v1.1.2 Mon 29 Jun 2015
    * Allow extra arguments to forward and reverse geocode call. Thanks https://github.com/CrazyPython